k8s-manifests/apps/2048/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  labels:
    app: game-2048
spec:
  type: ClusterIP
  selector:
    app: game-2048
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
